<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:n1="http://schemas.android.com/apk/res/android">
    <item
        n1:id="@+id/menu_popup_copy"
        n1:icon="@drawable/ic_content_copy_black_24dp"
        n1:title="@string/menu_popup_copy" />

    <item
        n1:id="@+id/menu_ip_ping"
        n1:icon="@drawable/ic_content_copy_black_24dp"
        n1:title="@string/title_ping" />

    <item
        n1:id="@+id/menu_ip_geoping"
        n1:icon="@drawable/ic_content_copy_black_24dp"
        n1:title="@string/titleGeoPing" />

    <item
        n1:id="@+id/menu_ip_portscan"
        n1:icon="@drawable/ic_content_copy_black_24dp"
        n1:title="@string/action_title_port_scanner" />
    <item
        n1:id="@+id/menu_ip_whois"
        n1:icon="@drawable/ic_content_copy_black_24dp"
        n1:title="@string/action_whois" />

    <item
        n1:id="@+id/menu_ip_netblocks"
        n1:icon="@drawable/ic_content_copy_black_24dp"
        n1:title="@string/action_title_ip_netblocks" />

</menu>