<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:icon="@drawable/ic_expand_more"
        android:orderInCategory="100"
        android:title="@null"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/action_share" />
            <item
                android:id="@+id/action_copy"
                android:icon="@drawable/ic_content_copy_black_24dp"
                android:title="@string/action_copy" />
        </menu>
    </item>
</menu>