<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/def_background"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ui.activities.DNSLookup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/timeoutHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaranth"
            android:padding="10dp"
            android:text="@string/label_ip_address"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/ip"
            style="@style/EtIp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/ipDigits"
            android:hint="@string/hint_enter_ip"
            android:imeOptions="actionDone"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:textColor="#111111"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

</ScrollView>