<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.splash.Splash">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_centerInParent="true"
        android:background="@drawable/ic_splash_logo"
        android:contentDescription="@string/description_logo" />

    <ImageView
        android:id="@+id/logo1"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_centerInParent="true"
        android:background="@drawable/ic_splash_logo"
        android:contentDescription="@string/description_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/alegreya_sans_sc_medium"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp" />

<!--    Find Wifi Network information-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/alegreya_sans_sc_medium"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/splash_slogan"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="20sp"
        tools:ignore="AllCaps" />

</RelativeLayout>